tests/grammar/snapshots/r#mod__grammar__alpha034__command-7.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"$command {unclosed interpolation$ let x = 10\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Command(
                                    [],
                                    [
                                        (
                                            Text(
                                                "$",
                                            ),
                                            0..1,
                                        ),
                                        (
                                            Text(
                                                "command",
                                            ),
                                            1..8,
                                        ),
                                        (
                                            Expression(
                                                (
                                                    Var(
                                                        (
                                                            "unclosed",
                                                            10..18,
                                                        ),
                                                    ),
                                                    10..18,
                                                ),
                                            ),
                                            9..18,
                                        ),
                                        (
                                            Text(
                                                "interpolation",
                                            ),
                                            19..32,
                                        ),
                                        (
                                            Text(
                                                "$",
                                            ),
                                            32..33,
                                        ),
                                    ],
                                    None,
                                ),
                                0..33,
                            ),
                        ),
                        0..33,
                    ),
                ),
                0..33,
            ),
            (
                Statement(
                    (
                        VariableInit(
                            (
                                "let",
                                34..37,
                            ),
                            (
                                "x",
                                38..39,
                            ),
                            (
                                Expression(
                                    (
                                        Number(
                                            (
                                                10.0,
                                                42..44,
                                            ),
                                        ),
                                        42..44,
                                    ),
                                ),
                                42..44,
                            ),
                        ),
                        34..44,
                    ),
                ),
                34..44,
            ),
        ],
    ),
    [
        found "interpolation" at 19..32 expected '"("', '";"', '"as"', '"is"', '"*"', '"/"', '"%"', '"+"', '"-"', '">="', '">"', '"<="', '"<"', '"=="', '"!="', '"and"', '"or"', '".."', '"then"', or '"}"',
    ],
)
