tests/grammar/snapshots/r#mod__grammar__alpha034__command-9.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"$command {}$\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Command(
                                    [],
                                    [
                                        (
                                            Text(
                                                "command",
                                            ),
                                            1..8,
                                        ),
                                        (
                                            Expression(
                                                (
                                                    Error,
                                                    10..10,
                                                ),
                                            ),
                                            9..11,
                                        ),
                                    ],
                                    None,
                                ),
                                0..12,
                            ),
                        ),
                        0..12,
                    ),
                ),
                0..12,
            ),
        ],
    ),
    [
        found end of input at 9..10 expected "expression",
    ],
)
