tests/grammar/snapshots/r#mod__grammar__alpha034__command.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(r#\"$echo \\\"Hello, world!\\\"$\"#))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Command(
                            [],
                            [
                                (
                                    Text(
                                        "$",
                                    ),
                                    0..1,
                                ),
                                (
                                    Text(
                                        "echo",
                                    ),
                                    1..5,
                                ),
                                (
                                    Escape(
                                        "\"",
                                    ),
                                    6..8,
                                ),
                                (
                                    Text(
                                        "Hello",
                                    ),
                                    8..13,
                                ),
                                (
                                    Text(
                                        ",",
                                    ),
                                    13..14,
                                ),
                                (
                                    Text(
                                        "world",
                                    ),
                                    15..20,
                                ),
                                (
                                    Text(
                                        "!",
                                    ),
                                    20..21,
                                ),
                                (
                                    Escape(
                                        "\"",
                                    ),
                                    21..23,
                                ),
                                (
                                    Text(
                                        "$",
                                    ),
                                    23..24,
                                ),
                            ],
                            None,
                        ),
                        0..24,
                    ),
                ),
                0..24,
            ),
        ),
        0..24,
    ),
]
